// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextCard formats the last_activity_at properly 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="The Donald"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "uri": "assignmentLine",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,
                    },
                    Object {
                      "tintColor": "#00BCD5",
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <Image
                source={
                  Object {
                    "uri": "publishSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "borderRadius": 8,
                      "bottom": -4,
                      "height": 16,
                      "position": "absolute",
                      "right": -4,
                      "width": 16,
                    },
                    Object {
                      "tintColor": "#00AC18",
                    },
                  ]
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontWeight": "600",
                    },
                  ],
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard renders 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="The Donald"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "uri": "assignmentLine",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,
                    },
                    Object {
                      "tintColor": "#00BCD5",
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <Image
                source={
                  Object {
                    "uri": "publishSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "borderRadius": 8,
                      "bottom": -4,
                      "height": 16,
                      "position": "absolute",
                      "right": -4,
                      "width": 16,
                    },
                    Object {
                      "tintColor": "#00AC18",
                    },
                  ]
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontWeight": "600",
                    },
                  ],
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard renders error if an error occured 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
>
  <ErrorView
    error={[Error: oh no an error happened]}
  />
</Screen>
`;

exports[`ContextCard renders for a non student 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="The Donald"
>
  <list />
</Screen>
`;

exports[`ContextCard renders for a user that cannot send messages 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="The Donald"
>
  <list />
</Screen>
`;

exports[`ContextCard renders for a user that cannot send messages 2`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={Array []}
  subtitle="Learn React Native"
  title="The Donald"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "uri": "assignmentLine",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,
                    },
                    Object {
                      "tintColor": "#00BCD5",
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <Image
                source={
                  Object {
                    "uri": "publishSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "borderRadius": 8,
                      "bottom": -4,
                      "height": 16,
                      "position": "absolute",
                      "right": -4,
                      "width": 16,
                    },
                    Object {
                      "tintColor": "#00AC18",
                    },
                  ]
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontWeight": "600",
                    },
                  ],
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard renders for a user that cannot view analytics 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="The Donald"
>
  <list />
</Screen>
`;

exports[`ContextCard renders if there is no enrollment 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="The Donald"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "uri": "assignmentLine",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,
                    },
                    Object {
                      "tintColor": "#00BCD5",
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <Image
                source={
                  Object {
                    "uri": "publishSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "borderRadius": 8,
                      "bottom": -4,
                      "height": 16,
                      "position": "absolute",
                      "right": -4,
                      "width": 16,
                    },
                    Object {
                      "tintColor": "#00AC18",
                    },
                  ]
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontWeight": "600",
                    },
                  ],
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard renders if there is no section in the enrollment 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="The Donald"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "uri": "assignmentLine",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,
                    },
                    Object {
                      "tintColor": "#00BCD5",
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <Image
                source={
                  Object {
                    "uri": "publishSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "borderRadius": 8,
                      "bottom": -4,
                      "height": 16,
                      "position": "absolute",
                      "right": -4,
                      "width": 16,
                    },
                    Object {
                      "tintColor": "#00AC18",
                    },
                  ]
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontWeight": "600",
                    },
                  ],
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard shows points values when there is no grade 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
  subtitle="Learn React Native"
  title="The Donald"
>
  <list>
    <item>
      <TouchableHighlight
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }
        testID="user-submission-row.cell-1"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "flex": 1,
                "flexDirection": "row",
                "minHeight": 54,
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "alignSelf": "flex-start",
              }
            }
            testID="user-submission-row-icon-published-1.icon-img"
          >
            <View
              accessibilityLabel="Published"
              style={
                Object {
                  "flex": 0,
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "uri": "assignmentLine",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,
                    },
                    Object {
                      "tintColor": "#00BCD5",
                    },
                  ]
                }
                testID="access-icon-image"
              />
              <Image
                source={
                  Object {
                    "uri": "publishSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "backgroundColor": "#FFFFFF",
                      "borderRadius": 8,
                      "bottom": -4,
                      "height": 16,
                      "position": "absolute",
                      "right": -4,
                      "width": 16,
                    },
                    Object {
                      "tintColor": "#00AC18",
                    },
                  ]
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                Object {
                  "marginLeft": 12,
                },
              ]
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontWeight": "600",
                    },
                  ],
                ]
              }
            >
              learn to write code
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "paddingTop": 2,
                    },
                    Object {
                      "marginBottom": 8,
                    },
                    Object {
                      "color": "#8B969E",
                    },
                  ],
                ]
              }
            >
              Not Submitted
            </Text>
          </View>
        </View>
      </TouchableHighlight>
    </item>
  </list>
</Screen>
`;

exports[`ContextCard shows the activity indicator when pending 1`] = `
<Screen
  navBarStyle="dark"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Send message",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/mail-small.png",
        },
        "testID": "context-card.email-contact",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</Screen>
`;
